--- a/src/layout/header/header.css
+++ b/src/layout/header/header.css
@@ -2,30 +2,15 @@
   justify-content: space-between;
   padding: 1rem 3rem;
   height: 10vh;
-  background: white !important;
+  /* background: white !important; */
   color: var(--light-900);
   border-left: 0.2px solid var(--light-200);
 }
 
-.searchContainer {
-  padding: 0.7rem;
-  background-color: var(--light-100);
-  border-radius: 5px;
-}
-
-.searchInput {
-  font-size: 1.5rem;
-  color: var(--light-700);
-  outline: none;
-  border: none;
-  background: transparent;
-}
-
-.searchIcon {
-  margin-right: 1rem;
-  height: 2rem;
-  margin-top: 0.2rem;
-  fill: var(--light-600);
+.header {
+  font-size: 2rem;
+  color: var(--light-600);
+  font-weight: 600;
 }
 
 .profileIcon {
@@ -33,8 +18,8 @@
 }
 
 .profileImage {
-  height: 95%;
-  width: 4.5rem;
+  height: 85%;
+  padding: 0 1.5rem;
   background: var(--blue-600);
   color: white;
   border-radius: 50%;
@@ -47,12 +32,13 @@
 
 .menuContainer {
   display: none;
+  margin-right: 0.5rem;
 }
 
 .closeIcon {
   position: absolute;
   top: 40%;
-  left: 16rem;
+  left: 21rem;
   z-index: 10000;
 }
 
