--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,15 @@ li {
 .flt::first-letter {
   text-transform: capitalize;
 }
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.Toastify__toast-container {
+  z-index: 1000000000001111 !important;
+}
+.Toastify__toast-container div {
+  font-size: 1.5rem !important;
+}
