--- a/src/components/explore-courses/course.css
+++ b/src/components/explore-courses/course.css
@@ -38,7 +38,7 @@
   line-height: 2;
   width: 250px;
   margin-right: 1rem;
-  margin-bottom: 5rem;
+  margin-top: 2.5rem;
   padding: 1.3rem;
   border: 1px solid #e4e9f2;
   border-radius: 8px;
