--- a/src/components/shared/loader/loader.css
+++ b/src/components/shared/loader/loader.css
@@ -10,7 +10,7 @@
   position: absolute;
   left: 8px;
   width: 16px;
-  background: #fff;
+  background: #13aa52;
   animation: loader 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .loader div:nth-child(1) {
@@ -41,5 +41,5 @@
   z-index: 1000000000000;
 }
 .fullPageLoader {
-  
+  background: var(--light-200);
 }
