--- a/src/components/course-details/course-details.css
+++ b/src/components/course-details/course-details.css
@@ -21,7 +21,7 @@
   color: var(--light-200);
   font-size: 1.7rem;
   font-weight: 400;
-  width: 70%;
+  width: 70vw;
 }
 
 .courseDetailsInstructors {
