--- a/src/components/explore-courses/course-filter/course-filter.css
+++ b/src/components/explore-courses/course-filter/course-filter.css
@@ -15,10 +15,10 @@
 }
 
 .filterContainer {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   /* background: rgba(0, 0, 0, 0.2); */
   justify-content: flex-end;
@@ -26,13 +26,11 @@
 }
 
 .filterWrapper {
-  height: 100%;
   width: 100%;
   background-color: rgb(15 23 42);
   width: 30rem;
   color: white;
   line-height: 0;
-  justify-content: space-between;
 }
 
 .filterHeader {
@@ -47,7 +45,7 @@
   margin: 1.5rem 0;
 }
 .filterBody {
-  padding: 5rem 1.5rem;
+  padding: 5rem 1.5rem 2rem 1.5rem;
 }
 
 .filterLabel {
