--- a/src/components/explore-courses/course-filter/course-filter.css
+++ b/src/components/explore-courses/course-filter/course-filter.css
@@ -15,14 +15,26 @@
 }
 
 .filterContainer {
-  position: absolute;
+  position: fixed;
+  overflow-y: scroll;
   top: 0;
   left: 0;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   /* background: rgba(0, 0, 0, 0.2); */
   justify-content: flex-end;
   z-index: 1000000;
+}
+
+.filterContainer::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.filterContainer::-webkit-scrollbar-track {
+  border-radius: 50%;
+}
+.filterContainer::-webkit-scrollbar-thumb {
+  background: var(--light-500);
+  border-radius: 10px;
 }
 
 .filterWrapper {
@@ -71,7 +83,7 @@ option {
 }
 
 .filterBtnWrapper {
-  padding: 2rem 1rem;
+  padding: 1rem 1rem;
   justify-content: flex-end;
 }
 
