--- a/src/components/lib-material/material.css
+++ b/src/components/lib-material/material.css
@@ -3,6 +3,7 @@
   background: rgba(255, 255, 255, 0.9);
   border-radius: 8px;
   margin: 2rem 0;
+  border: 1px solid var(--light-300);
 }
 
 .libMaterialCard:hover {
@@ -39,9 +40,46 @@
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding: 1rem;
 }
 .materialPDF canvas {
   max-width: 100% !important;
   height: auto !important;
+}
+.w-full {
+  width: 100%;
+}
+.pageNo {
+  font-size: 1.7rem;
+  color: white;
+  text-align: center;
+  font-weight: 500;
+}
+.materialPopup::-webkit-scrollbar {
+  width: 6px;
+}
+
+.materialPopup > div::-webkit-scrollbar-thumb {
+  background: #0891b2;
+  border-radius: 25%;
+}
+
+.closeMat {
+  position: fixed;
+  right: 2rem;
+  top: 1.5rem;
+}
+.all-page-container {
+  height: 100%;
+  max-height: 500px;
+  overflow: auto;
+}
+.react-pdf__Page__textContent {
+  position: relative !important;
+  width: auto !important;
+  height: auto !important;
+  top: 0 !important;
+  left: 0 !important;
 }
