--- a/src/components/my-enrollments/my-enrollment.css
+++ b/src/components/my-enrollments/my-enrollment.css
@@ -16,7 +16,7 @@
 }
 
 .myEnrollmentTag {
-  font-size: 1.5rem;
+  font-size: 1.5rem !important;
   color: var(--light-500);
 }
 .myEnrollDescription {
